# python-agnostic-migrations

./: LICENSE.md  README.md  makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/verify/: action.yml
.github/workflows/: main.yml  publish.yml
agnostic_migrations/: __init__.py
tests/: test_agnostic_migrations.py
tests/resources/basic-migrations/: 1.py  3.md
tests/resources/error-migrations/: 2.py
tests/resources/invalid-migrations/: 2.py
