[tool.poetry]
name = "agnostic-migrations"
version = "1.0.0"
description = ""
authors = ["Source Allies <pypi@sourceallies.com>"]
readme = "README.md"
packages = [{include = "agnostic_migrations"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
coverage = "^7.5.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
